First pass at changes listing support from Apcera to Synadia Fixes to incorrect docker 'apcera/gnatsd' references Fixes to slack invite document

--- a/layouts/download/single.html
+++ b/layouts/download/single.html
@@ -18,7 +18,7 @@
           <div id="download-detail-con" class="row">
             <div class="col-lg-3 col-sm-4 detail-block left">
               <div class="well">
-                {{ if .supported }}<p class="supported">Supported by <img src="/img/logo-sm.png" alt="Apcera" /></p>{{ end }}
+                {{ if .supported }}<p class="supported">Supported by Synadia</p>{{ end }}
 
                 <div class="download-info">
                   <p>Language: {{ .language }}</p>
