--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,35 +7,14 @@
               <a target="_blank" href="https://twitter.com/nats_io"><i class="icon icon-twitter"></i></a>
               <a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><i class="icon icon-google-plus"></i></a>
               <a target="_blank" href="https://github.com/nats-io"><i class="icon icon-github"></i></a>
-              <a target="_blank" href="https://docs.google.com/a/apcera.com/forms/d/104yA7oqq7SPoMDG_J9MnVE74gVwBnTmVHKP5ABHoM5k/viewform?embedded=true"><i class="icon icon-slack"></i></a>
+              <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeNKjEqsH1dPKRO3YHPMZbRrHhnxsTxVQOkq7WvJ-8q1DBavA/viewform?usp=sf_link"><i class="icon icon-slack"></i></a>
             </p>
-            <p>NATS is <a href="https://github.com/nats-io/gnatsd" target="_blank">open-source software</a> (<a href="#licenseModal" data-toggle="modal" data-target="#licenseModal">View License</a>), as is <a href="https://github.com/nats-io/nats-site" target="_blank">this site</a>.</p>
+            <p>NATS is <a href="https://github.com/nats-io/gnatsd" target="_blank">open-source software</a>, as is <a href="https://github.com/nats-io/nats-site" target="_blank">this site</a>.</p>
           </div>
         </div>
       </div>
     </footer>
     <!-- End Footer -->
-
-    <!-- License Modal -->
-    <div class="modal fade" id="licenseModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">NATS License <small>(The MIT License)</small></h4>
-          </div>
-          <div class="modal-body">
-            <p>Copyright (c) 2012&#8211;2014 Apcera Inc.</p>
-            <p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the &#8220;Software&#8221;), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:</p>
-            <p>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.</p>
-            <p>THE SOFTWARE IS PROVIDED &#8220;AS IS&#8221;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="/js/index.js"></script>
