--- a/layouts/section/download.html
+++ b/layouts/section/download.html
@@ -38,13 +38,13 @@
               <td><a href="https://github.com/nats-io/nats-connector-framework" target="_blank">NATS Connector Framework</a></td>
               <td>A pluggable Java based framework to bridge the NATS messaging system and other technologies.</td>
               <td>NATS.io team</td>
-              <td>Apcera</td>
+              <td>Synadia</td>
             </tr>
             <tr>
               <td><a href="https://github.com/nats-io/nats-connector-redis" target="_blank">NATS Redis PubSub</a></td>
               <td>The NATS Redis publish subscribe connector is provided to facilitate the bridging of NATS and Redis Publish/Subscribe.</td>
               <td>NATS.io team</td>
-              <td>Apcera</td>
+              <td>Synadia</td>
             </tr>
             <tr>
               <td><a href="https://github.com/Logimethods/nats-connector-spark" target="_blank">Apache Spark</a></td>
@@ -152,7 +152,7 @@
               <td><a href="https://github.com/nats-io/prometheus-nats-exporter" target="_blank">NATS Prometheus Exporter</a></td>
               <td>The official NATS exporter for Prometheus, written in Go. It supports monitoring multiple NATS servers, is highly resilient to network outages, and can be embedded into go applications via an API.  Metrics are exposed through a HTTP(S) interface for Prometheus to collect them.</td>
               <td>NATS.io team</td>
-              <td>Apcera</td>
+              <td>Synadia</td>
             </tr>
             <tr>
               <td><a href="http://bit.ly/1X36qKZ" target="_blank">Rancher NATS</a></td>
