--- a/layouts/partials/releases.html
+++ b/layouts/partials/releases.html
@@ -8,7 +8,7 @@
         <div class="row">
           <div class="col-md-8 title-con">
             <h3>{{ .name }}{{ if in .type "client" }} Client{{ end }}</h3>
-            {{ if .supported }}<p class="supported">Supported by <img src="/img/logo-sm.png" alt="Apcera" /></p>{{ end }}
+            {{ if .supported }}<p class="supported">Supported by Synadia></p>{{ end }}
           </div>
           <div class="col-md-4 download-con">
             <div class="download-con">
