centered social icons and NATS oss statement

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,14 +2,14 @@
     <footer{{ if .IsHome }} id="home-page-footer"{{ end }}>
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-4 copyright">
-            <p class="social">
+          <div class="col-xs-12 copyright">
+            <p class="social text-center">
               <a target="_blank" href="https://twitter.com/nats_io"><i class="icon icon-twitter"></i></a>
               <a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><i class="icon icon-google-plus"></i></a>
               <a target="_blank" href="https://github.com/nats-io"><i class="icon icon-github"></i></a>
               <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeNKjEqsH1dPKRO3YHPMZbRrHhnxsTxVQOkq7WvJ-8q1DBavA/viewform?usp=sf_link"><i class="icon icon-slack"></i></a>
             </p>
-            <p>NATS is <a href="https://github.com/nats-io/gnatsd" target="_blank">open-source software</a>, as is <a href="https://github.com/nats-io/nats-site" target="_blank">this site</a>.</p>
+            <p class="text-center">NATS is <a href="https://github.com/nats-io/gnatsd" target="_blank">open-source software</a>, as is <a href="https://github.com/nats-io/nats-site" target="_blank">this site</a>.</p>
           </div>
         </div>
       </div>
