Add NATS Stream Replicator

--- a/layouts/section/download.html
+++ b/layouts/section/download.html
@@ -179,6 +179,12 @@
               <td>Community</td>
             </tr>
             <tr>
+              <td><a href="https://github.com/choria-io/stream-replicator" target="_blank">NATS Stream Replicator</a></td>
+              <td>This project replicates streams between NATS streaming clusters.  Ideal for mirroring streams across data centers.</td>
+              <td><a target="_blank" href="https://github.com/ripienaar">R.I. Pienaar</a></td>
+              <td>Community</td>
+            </tr>            
+            <tr>
               <td><a href="https://github.com/chop-dbhi/nats-rpc" target="_blank">NATS-RPC Generator</a></td>
               <td>RPC layer on top of NATS standardizing on Protocol Buffers.</td>
               <td><a target="_blank" href="https://github.com/chop-dbhi">Department of Biomedical and Health Informatics</a></td>
