--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
               <a target="_blank" href="https://twitter.com/nats_io"><i class="icon icon-twitter"></i></a>
               <a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><i class="icon icon-google-plus"></i></a>
               <a target="_blank" href="https://github.com/nats-io"><i class="icon icon-github"></i></a>
-              <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeNKjEqsH1dPKRO3YHPMZbRrHhnxsTxVQOkq7WvJ-8q1DBavA/viewform?usp=sf_link"><i class="icon icon-slack"></i></a>
+              <a target="_blank" href="https://join.slack.com/t/natsio/shared_invite/enQtMzE2NDkxNDI2NTE1LTc5ZDEzYTkwYWZkYWQ5YjY1MzBjMWZmYzA5OGQxMzlkMGQzMjYxNGM3MWYxMjNiYmNjNzIwMTVjMWE2ZDgxZGM"><i class="icon icon-slack"></i></a>
             </p>
             <p class="text-center">NATS is <a href="https://github.com/nats-io/gnatsd" target="_blank">open-source software</a>, as is <a href="https://github.com/nats-io/nats-site" target="_blank">this site</a>.</p>
           </div>
