--- a/layouts/documentation/list.html
+++ b/layouts/documentation/list.html
@@ -5,7 +5,11 @@
       {{ partial "side-menu.html" . }}
     </div>
     <div id="documentation-content" class="col-md-9">
+      {{ if eq .File.Path "index.md" }}
+      <a class="pull-right" target="_blank" href="{{ .Site.Params.githubBaseUrl }}/_{{ .File.Path }}"><i class="icon icon-github"></i> Edit on GitHub</a>
+      {{ else }}
       <a class="pull-right" target="_blank" href="{{ .Site.Params.githubBaseUrl }}/{{ .File.Path }}"><i class="icon icon-github"></i> Edit on GitHub</a>
+      {{ end }}
       {{ .Content }}
     </div>
   </div>
