--- a/src/less/util/icons.less
+++ b/src/less/util/icons.less
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'nats';
-    src:    url('/fonts/nats.eot?22bw7o');
-    src:    url('/fonts/nats.eot?22bw7o#iefix') format('embedded-opentype'),
-        url('/fonts/nats.ttf?22bw7o') format('truetype'),
-        url('/fonts/nats.woff?22bw7o') format('woff'),
-        url('/fonts/nats.svg?22bw7o#nats') format('svg');
+    src:  url('/fonts/nats.eot?zf0rz4');
+    src:  url('/fonts/nats.eot?zf0rz4#iefix') format('embedded-opentype'),
+    url('/fonts/nats.ttf?zf0rz4') format('truetype'),
+    url('/fonts/nats.woff?zf0rz4') format('woff'),
+    url('/fonts/nats.svg?zf0rz4#nats') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -24,11 +24,14 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-google-plus:before {
-    content: "\e905";
+.icon-reddit:before {
+    content: "\e906";
 }
-.icon-slack:before {
-    content: "\e900";
+.icon-brand:before {
+    content: "\e906";
+}
+.icon-social:before {
+    content: "\e906";
 }
 .icon-backward2:before {
     content: "\e902";
@@ -41,4 +44,10 @@
 }
 .icon-github:before {
     content: "\e901";
+}
+.icon-google-plus:before {
+    content: "\e905";
+}
+.icon-slack:before {
+    content: "\e900";
 }
