--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,11 +4,11 @@
         <div class="row">
           <div class="col-xs-12 copyright">
             <p class="social text-center">
-              <a target="_blank" href="https://twitter.com/nats_io"><i class="icon icon-twitter"></i></a>
-              <a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><i class="icon icon-google-plus"></i></a>
-              <a target="_blank" href="https://github.com/nats-io"><i class="icon icon-github"></i></a>
-              <a target="_blank" href="https://join.slack.com/t/natsio/shared_invite/enQtMzE2NDkxNDI2NTE1LTc5ZDEzYTkwYWZkYWQ5YjY1MzBjMWZmYzA5OGQxMzlkMGQzMjYxNGM3MWYxMjNiYmNjNzIwMTVjMWE2ZDgxZGM"><i class="icon icon-slack"></i></a>
-            <a target="_blank" href=""><i class="icon icon-reddit"></i></a>
+                <a target="_blank" href="https://twitter.com/nats_io"><i class="icon icon-twitter"></i></a>
+                <a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><i class="icon icon-google-plus"></i></a>
+                <a target="_blank" href="https://github.com/nats-io"><i class="icon icon-github"></i></a>
+                <a target="_blank" href="https://join.slack.com/t/natsio/shared_invite/enQtMzE2NDkxNDI2NTE1LTc5ZDEzYTkwYWZkYWQ5YjY1MzBjMWZmYzA5OGQxMzlkMGQzMjYxNGM3MWYxMjNiYmNjNzIwMTVjMWE2ZDgxZGM"><i class="icon icon-slack"></i></a>
+                <a target="_blank" href="https://www.reddit.com/r/NATS_io/"><i class="icon icon-reddit"></i></a>
             </p>
             <p class="text-center">NATS is <a href="https://github.com/nats-io/gnatsd" target="_blank">open-source software</a>, as is <a href="https://github.com/nats-io/nats-site" target="_blank">this site</a>.</p>
           </div>
