- changed logo partials to use `readFile` to load the source svgs from static/img.

--- a/layouts/partials/logos/baidu.html
+++ b/layouts/partials/logos/baidu.html
@@ -1,13 +1,5 @@
 <div class="col-xs-6 col-md-2 baidu">
     <a target="_blank" href="http://www.baidu.com/">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 221.8 71.25">
-            <title>Baidu</title>
-            <path d="M92.9,24.6c-0.4-3.1-4.1-8.6-9-8.2-6.3.6-7.3,9.6-7.3,9.6-0.8,4.2,2,13.2,9.8,11.5S93.1,26.6,92.9,24.6ZM100.8,0c-4.3,0-7.7,4.9-7.7,11s3.5,11,7.7,11,7.7-4.9,7.7-11S105.1,0,100.8,0Zm21.6,1.8c-4.1-.9-9.1,5.6-9.6,9.8-0.6,5.2.7,10.4,6.5,11.1s9.4-5.4,10.1-10S126.4,2.7,122.4,1.8Zm19.5,28.7c0-2.2-1.8-8.9-8.7-8.9s-7.8,6.3-7.8,10.8c0,4.2.4,10.2,8.9,10S141.9,32.7,141.9,30.5ZM97.7,50.9a4.57,4.57,0,0,0-3.1,2.8,7.3,7.3,0,0,0-.3,3.8A4.42,4.42,0,0,0,98,60.9h4.1V51H97.7V50.9Zm0,0a4.57,4.57,0,0,0-3.1,2.8,7.3,7.3,0,0,0-.3,3.8A4.42,4.42,0,0,0,98,60.9h4.1V51H97.7V50.9Zm35.6-1s-8.9-6.8-14-14.3c-7-10.9-17-6.5-20.3-.9s-8.5,9.1-9.2,10S79.1,51,81.3,60.8s10,9.6,10,9.6a42.67,42.67,0,0,0,12.4-.9,25.71,25.71,0,0,1,12.4.4s15.5,5.2,19.7-4.8S133.3,49.9,133.3,49.9ZM106.7,64.8H96.6c-4.3-.9-6.1-3.8-6.3-4.4a11.47,11.47,0,0,1-.8-7,8.75,8.75,0,0,1,7.2-6.5h5.4V40.3l4.6,0.1V64.8Zm18.8-.1H113.9c-4.5-1.2-4.7-4.4-4.7-4.4V47.6l4.7-.1V59a2.42,2.42,0,0,0,1.8,1.5h4.8V47.6h5V64.7ZM94.6,53.6a7.3,7.3,0,0,0-.3,3.8A4.42,4.42,0,0,0,98,60.8h4.1V50.9H97.8A5,5,0,0,0,94.6,53.6Z" fill="#fff"/>
-            <path d="M180.7,39.1V33.7H145.1v5.5h15.3L159,42.5H146V69.6h30.9c3.2,0,2.9-3.3,2.9-3.3V42.5h-13l1.1-3.4h12.8Zm-6.9,24.7a1.53,1.53,0,0,1-.9.9H152.4V58.4h21.4v5.4h0Zm0-10.6H152.4v-6h21.4v6h0Z" fill="#fff"/>
-            <path d="M221.4,33.9h-14V31.2h-6.6v2.6h-16V69.6h5.8V38.4h30.8V33.9Zm-3.7,7.4V39.2h-5.6v2.1H200.5v-2h-5.3v2h-3.6l0.1,4.1h3.5V53h19.4c2.7,0,3.1-2.9,3.1-2.9V45.3h4.1V41.2l-4.1.1h0ZM212,48.1a1.75,1.75,0,0,1-1.1.9H200.4V45.2H212v2.9h0ZM192.3,58.5l9,5.2c-0.7.8-3.8,1.8-3.8,1.8h-6v4h8.1a39.7,39.7,0,0,0,6.9-2.8,13.65,13.65,0,0,0,5.4,2.4h9.3v-4h-7a10.64,10.64,0,0,1-3.6-1.4l10.6-6.1V54.3H192.3v4.2h0Zm18.6,0-5.1,2.7-4.7-2.7h9.8Z" fill="#fff"/>
-            <path d="M65.9,39.6h7.8V32.8H65.9v6.8Zm0,29.8h7.8V42.6H65.9V69.4Z" fill="#fff"/>
-            <path d="M53.2,42.6H36.6v5.6H51.1s3.5,0.9,3.5,3v2H41.5s-5.2.5-6.8,6.7a10.43,10.43,0,0,0,.3,4.8,8.32,8.32,0,0,0,6.2,4.8h21V50.3a10.19,10.19,0,0,0-9-7.7h0Zm1.5,21.6H44.1a3.49,3.49,0,0,1-2-1.8,2.38,2.38,0,0,1,0-1.9,3.79,3.79,0,0,1,2.3-2H54.8v5.7H54.7Z" fill="#fff"/>
-            <path d="M33,60a9.34,9.34,0,0,0-5.6-8.8c5-2.6,4.3-9.1,4.3-9.1-0.5-10-12.8-9.6-12.8-9.6H0V69.8H21.4C33.9,69.8,33,60,33,60h0ZM20.9,62.9H8.1V54.8H20.8l0.4,0.1a4.62,4.62,0,0,1,3.3,2.6,4.89,4.89,0,0,1-.6,3.6c0.1,0-.7,1.5-3,1.8h0Zm2.7-17.3a4.3,4.3,0,0,1-3.1,1.9H8.1V39.8H20.4s2.7-.1,3.6,2a6.13,6.13,0,0,1-.4,3.8h0Z" fill="#fff"/>
-        </svg>
+        {{ readFile "static/img/baidu.svg" | safeHTML }}
     </a>
 </div>
