--- a/layouts/partials/logos/htc.html
+++ b/layouts/partials/logos/htc.html
@@ -1,10 +1,5 @@
 <div class="col-xs-6 col-md-2 htc">
     <a target="_blank" href="http://www.htc.com/us/">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 246.2 81.74">
-            <title>htc</title>
-            <path d="M225.7,69.1c-13,.1-25.4.2-28.8-0.1-7-.6-11.6-5.2-12.2-11.9a55.07,55.07,0,0,1,0-11.5c0.6-6.5,6.1-12.7,12.2-13,2.2-.1,8-0.1,18.6-0.1l30.7,0.1V19.8s-24.5,0-31.8-.1c-9.9,0-14.8-.1-18,0.1-6.9.3-12.7,2.7-17.2,7.3-4.3,4.3-6.8,11.2-7.2,18.2a89.5,89.5,0,0,0,0,11.6c0.7,7.5,3.1,13.4,7.2,17.5a25.64,25.64,0,0,0,17.2,7.3c5.2,0.1,49.8,0,49.8,0V69s-13.5,0-20.5.1" fill="#fff"/>
-            <path d="M87.1,20.5V33.2h30.3V81.4h12.8V33.2h30.3V20.5H87.1Z" fill="#fff"/>
-            <path d="M73.8,44.6a24.57,24.57,0,0,0-7.2-17.5c-4.9-5-12.4-7-17.2-7.3-4.2-.2-21-0.2-24.9,0-5.5.2-9.6,1.9-11.6,3.4h0V0H0V81.7H12.8s-0.3-33.4,0-37.1A12.88,12.88,0,0,1,24.5,32.5c5-.4,20.1-0.3,24.8,0C55.8,33,60.6,38,61,44.9c0.1,2.5,0,36.8,0,36.8H73.8V44.6" fill="#fff"/>
-        </svg>
+        {{ readFile "static/img/htc.svg" | safeHTML }}
     </a>
 </div>
