--- a/layouts/partials/logos/vmware.html
+++ b/layouts/partials/logos/vmware.html
@@ -1,12 +1,5 @@
 <div class="col-xs-6 col-md-2 vmware">
     <a target="_blank" href="http://www.vmware.com/">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 180.47 28.81">
-            <title>vmware</title>
-            <path d="M80.57,26.6L72.37,3.7a3.59,3.59,0,0,1-.2-1.1A1.92,1.92,0,0,1,74.11.7h0.06a2.12,2.12,0,0,1,2,1.7L83,22.1,89.9,2.3a2,2,0,0,1,2-1.6h0.2a2.16,2.16,0,0,1,2.1,1.6L101,22.1l6.9-19.8A2,2,0,0,1,109.8.7a1.92,1.92,0,0,1,2,1.84s0,0,0,.06a3.54,3.54,0,0,1-.3,1.1l-8.3,22.9a2.38,2.38,0,0,1-2.2,1.8h-0.2a2.29,2.29,0,0,1-2.2-1.8L92,7.1,85.2,26.6A2.29,2.29,0,0,1,83,28.4H82.9a2.49,2.49,0,0,1-2.3-1.8" fill="#fff"/>
-            <path d="M140.47,2.6a2,2,0,0,1,2-2,1.94,1.94,0,0,1,2,1.88s0,0.08,0,.12V7.2a11,11,0,0,1,9.3-6.6,1.94,1.94,0,0,1,2,1.88s0,0.08,0,.12a1.9,1.9,0,0,1-1.79,2h0c-5.2.6-9.5,4.6-9.5,12.4v9.2a2,2,0,0,1-4,0V2.6h0Z" fill="#fff"/>
-            <path d="M168.77,28.6c-7.3,0-13.3-5.7-13.3-14V14.5c0-7.7,5.4-14,12.7-14,7.9,0,12.3,6.5,12.3,13.6a1.9,1.9,0,0,1-1.9,1.9h-19.2c0.6,5.8,4.6,9.1,9.3,9.1a10.61,10.61,0,0,0,7.6-3.1,1.61,1.61,0,0,1,1.1-.5,1.69,1.69,0,0,1,1.7,1.68s0,0,0,0a1.76,1.76,0,0,1-.6,1.3,12.09,12.09,0,0,1-9.7,4.1m7.9-15.5c-0.4-4.9-3.2-9.1-8.5-9.1-4.6,0-8.1,3.9-8.6,9.1h17.1Z" fill="#fff"/>
-            <path d="M111.87,20.2V20.1c0-5.7,4.7-8.7,11.5-8.7a27.52,27.52,0,0,1,8.3,1.2V11.7c0-4.9-3-7.4-8.1-7.4a13.65,13.65,0,0,0-6.3,1.2,2.54,2.54,0,0,1-.7.2,1.84,1.84,0,0,1-1.8-1.7,1.75,1.75,0,0,1,1.1-1.7A17.52,17.52,0,0,1,124,.8q5.7,0,8.7,3c1.8,1.8,2.8,4.4,2.8,7.9V26.6a1.92,1.92,0,0,1-1.84,2H133.6a1.84,1.84,0,0,1-1.9-1.78s0-.08,0-0.12V24.1a11.77,11.77,0,0,1-9.8,4.7c-4.9-.2-10-3.1-10-8.6m19.9-2.1V15.5a27.38,27.38,0,0,0-7.9-1.2c-5.1,0-7.9,2.2-7.9,5.6V20c0,3.4,3.1,5.4,6.8,5.4,4.9,0,9-3,9-7.3" fill="#fff"/>
-            <path d="M7.37,2.4A3.78,3.78,0,0,0,2.44.32L2.27,0.4a3.79,3.79,0,0,0-1.95,5l0,0.11L9,24.1c1.3,2.9,2.8,4.5,5.4,4.5,2.9,0,4.1-1.7,5.4-4.5,0,0,7.5-16.3,7.6-16.5a1.08,1.08,0,0,1,1.1-.7,1.22,1.22,0,0,1,1.2,1.2V24c0,2.5,1.4,4.5,4,4.5s4-2,4-4.5V11.1A4,4,0,0,1,41.59,7H42a3.88,3.88,0,0,1,4.1,4.1v13c0,2.5,1.4,4.5,4,4.5s4-2,4-4.5v-13A4,4,0,0,1,58,7h0.28a3.88,3.88,0,0,1,4.1,4.1v13c0,2.5,1.4,4.5,4,4.5s4-2,4-4.5V9.3c0-5.5-4.4-9.3-9.7-9.3a12.76,12.76,0,0,0-8.5,3.7C50.47,1.5,48,.1,44,0.1c-4.3,0-8.1,3.6-8.1,3.6A10.09,10.09,0,0,0,28.57.1c-3.8,0-6.9,1.7-8.7,5.9l-5.5,12.9Z" fill="#fff"/>
-        </svg>
+        {{ readFile "static/img/vmware.svg" | safeHTML }}
     </a>
 </div>
