--- a/layouts/section/download.html
+++ b/layouts/section/download.html
@@ -1,244 +1,28 @@
 {{ $.Scratch.Set "pageRelUrl" .RelPermalink }}
 {{ partial "header.html" . }}
 <div id="main-con" class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div id="download-intro-con" class="row">
+    <div class="row">
         <div class="col-md-12">
-          <div class="page-header">
-            <h1>Download</h1>
-          </div>
-          <p>Here you will find the NATS Server (for simple, fast publish-subscribe) , NATS Streaming Server (for data streaming and persistence), and officially supported clients. Our documentation provides detailed instructions on how to get started.</p>
-          <p>Also available are a wide variety of community contributed clients, connectors, and utilities. We are always happy to receive contributions to review - send us a PR, or contact us at info@nats.io to share what you have built with us!</p>
+            <div id="download-intro-con" class="row">
+                <div class="col-md-12">
+                    <div class="page-header">
+                        <h1>Download</h1>
+                    </div>
+                    <p>Here you will find the NATS Server (for simple, fast publish-subscribe) , NATS Streaming Server (for data streaming and persistence), and officially supported clients. Our documentation provides detailed instructions on how to get started.</p>
+                    <p>Also available are a wide variety of community contributed clients, connectors, and utilities. We are always happy to receive contributions to review - send us a PR, or contact us at info@nats.io to share what you have built with us!</p>
+                </div>
+            </div>
+
+            {{ partial "menu-downloads.html" . }}
+
+            <hr>
+
+            {{ partial "addons.html" . }}
         </div>
-      </div>
-
-      {{ partial "menu-downloads.html" . }}
-
-      <hr>
-      <h2>Connectors and Utilities</h2>
-      <div class="table-responsive">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th class="col-md-2">Name</th>
-              <th class="col-md-7">Description</th>
-              <th class="col-md-2">Developer</th>
-              <th class="col-md-1">Support</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><a href="https://github.com/hemerajs/hemera" target="_blank">Apache Flink</a></td>
-              <td>Allows Apache Flink to send/receive a stream of string based messages to/from NATS.</td>
-              <td><a target="_blank" href="https://github.com/mring33621">Matthew Ring</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/nats-io/nats-connector-framework" target="_blank">NATS Connector Framework</a></td>
-              <td>A pluggable Java based framework to bridge the NATS messaging system and other technologies.</td>
-              <td>NATS.io team</td>
-              <td>Synadia</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/nats-io/nats-connector-redis" target="_blank">NATS Redis PubSub</a></td>
-              <td>The NATS Redis publish subscribe connector is provided to facilitate the bridging of NATS and Redis Publish/Subscribe.</td>
-              <td>NATS.io team</td>
-              <td>Synadia</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/Logimethods/nats-connector-spark" target="_blank">Apache Spark</a></td>
-              <td>Provides an Apache Spark (a fast and general engine for large-scale data processing) integration with NATS.</td>
-              <td><a target="_blank" href="https://github.com/laugimethods">Laurent Magnin</a> at Logimethods</td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/dankomiocevic/aws-nats" target="_blank">AWS NATS</a></td>
-              <td>This repository contains tools and templates to help using NATS in the Amazon Web Services platform.</td>
-              <td><a target="_blank" href="https://github.com/dankomiocevic">Danko Miocevic</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/cmfatih/natsboard" target="_blank">NATSBoard</a></td>
-              <td>Dashboard for monitoring NATS. It provides real-time information from NATS server.</td>
-              <td><a target="_blank" href="https://github.com/fatihcode">Fatih Cetinkaya</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/pires/nats-coreos-cluster" target="_blank">CoreOS Clustering</a></td>
-              <td>NATS clustering made easy with CoreOS, etcd2 and Docker.</td>
-              <td><a target="_blank" href="https://github.com/pires">Paulo Pires</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/nxtedition/deepstream.io-msg-nats" target="_blank">Deepstream.io connector for NATS</a></td>
-              <td>Deepstream message connector for NATS</td>
-              <td><a target="_blank" href="https://github.com/nxtedition">nxtedition</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/dokku/dokku-nats" target="_blank">Dokku-NATS</a></td>
-              <td>NATS plugin for Dokku, a PaaS Platform</td>
-              <td><a target="_blank" href="https://github.com/josegonzalez">Jose Diaz-Gonzalez</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/netlify/elastinats" target="_blank">Elasticsearch</a></td>
-              <td>Allows you to take data from nats subjects/groups and pump these into Elasticsearch.</td>
-              <td><a target="_blank" href="http://www.netlify.com/">Netlify</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/vsundupey/nats-elk" target="_blank">NATS Elk</a></td>
-              <td>Utility for forwarding NATS monitoring data to ELK Stack</td>
-              <td><a target="_blank" href="https://github.com/vsundupey">Vladimir Sundupey</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="http://fluentbit.io/documentation/0.8/output/nats.html" target="_blank">Fluent Bit</a></td>
-              <td>The NATS output connector allows to flush your Fluent Bit records into a NATS Server endpoint</td>
-              <td><a target="_blank" href="http://fluentbit.io/">Fluent Bit</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/cloudfoundry-community/fluent-plugin-nats" target="_blank">Fluentd Event Collector</a></td>
-              <td>NATS plugin for fluentd Event Collector</td>
-              <td><a target="_blank" href="https://github.com/cloudfoundry-community">Cloud Foundry Community</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/Logimethods/nats-connector-gatling" target="_blank">A Gatling to NATS Connector</a></td>
-              <td>The NATS Gatling library provides a Gatling (an open-source load testing framework based on Scala, Akka and Netty) to NATS messaging system (a highly performant cloud native messaging system) Connector.</td>
-              <td><a target="_blank" href="https://github.com/laugimethods">Laurent Magnin</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/pires/kubernetes-nats-cluster" target="_blank">Kubernetes</a></td>
-              <td>NATS cluster on top of Kubernetes made easy.</td>
-              <td><a target="_blank" href="https://github.com/pires">Paulo Pires</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/trillium-labs/logrus-nats" target="_blank">Logrus-NATS</a></td>
-              <td>A Logrus hook for sending data to NATS.</td>
-              <td><a target="_blank" href="https://github.com/erikhoward">Erik Howard</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/rybit/nats_logrus_hook" target="_blank">Logrus</a></td>
-              <td>NATS hook for Logrus -  helpers assume you are using a TLS connection.</td>
-              <td><a target="_blank" href="https://github.com/rybit">Ryan Neal</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/repejota/nats-mon" target="_blank">NATS-Mon</a></td>
-              <td>A realtime web based NATS monitor</td>
-              <td><a target="_blank" href="https://github.com/repejota">Raül Pérez</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/nvisibleinc/go-ari-proxy" target="_blank">Nvisible Inc Go ARI Proxy</a></td>
-              <td>An implementation of the [go-ari-library] used to connect to the Asterisk REST Interface for delivery of Events and Commands across a message bus.</td>
-              <td><a target="_blank" href="https://github.com/leifmadsen">Leif Madsen</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/lovoo/nats_exporter" target="_blank">Prometheus</a></td>
-              <td>NATS exporter for Prometheus, written in Go. It extracts several metrics and provides them via the standard HTTP interface for Prometheus to collect them.</td>
-              <td><a target="_blank" href="http://lovoo.com/">Lovoo</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/nats-io/prometheus-nats-exporter" target="_blank">NATS Prometheus Exporter</a></td>
-              <td>The official NATS exporter for Prometheus, written in Go. It supports monitoring multiple NATS servers, is highly resilient to network outages, and can be embedded into go applications via an API.  Metrics are exposed through a HTTP(S) interface for Prometheus to collect them.</td>
-              <td>NATS.io team</td>
-              <td>Synadia</td>
-            </tr>
-            <tr>
-              <td><a href="http://bit.ly/1X36qKZ" target="_blank">Rancher NATS</a></td>
-              <td>This is an extended version of the official Docker image for nats. It adds support to set up a cluster easily onrancher.</td>
-              <td><!--<a target="_blank" href="#"></a>--></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/sohlich/nats-proxy" target="_blank">REST to NATS Proxy</a></td>
-              <td>This library provides a translation of HTTP requests to NATS. Client side is partly inspired by Gin to process requests</td>
-              <td><a target="_blank" href="https://github.com/sohlich">Radomír Sohlich</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/pires/nats-sniffer" target="_blank">NATS Sniffer</a></td>
-              <td>A simple sniffer for NATS, the cloud native messaging system.</td>
-              <td><a target="_blank" href="https://github.com/pires">Paulo Pires</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/canhnt/k8s-nats-streaming" target="_blank">NATS Streaming Server on Kubernetes</a></td>
-              <td>This project contains a Docker image and a Helm chart to run NATS Streaming Server in the Kubernetes cluster. The NATS Streaming Server can run in fault tollerance mode.</td>
-              <td><a target="_blank" href="https://github.com/canhnt">Canh Ngo</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/choria-io/stream-replicator" target="_blank">NATS Stream Replicator</a></td>
-              <td>This project replicates streams between NATS streaming clusters.  Ideal for mirroring streams across data centers.</td>
-              <td><a target="_blank" href="https://github.com/ripienaar">R.I. Pienaar</a></td>
-              <td>Community</td>
-            </tr>            
-            <tr>
-              <td><a href="https://github.com/chop-dbhi/nats-rpc" target="_blank">NATS-RPC Generator</a></td>
-              <td>RPC layer on top of NATS standardizing on Protocol Buffers.</td>
-              <td><a target="_blank" href="https://github.com/chop-dbhi">Department of Biomedical and Health Informatics</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/hemerajs/hemera" target="_blank">RPC over NATS</a></td>
-              <td>Provides an RPC and pub/sub framework with first-class support for NATS.</td>
-              <td><a target="_blank" href="https://github.com/Workiva">Workiva</a></td>
-              <td>Workiva</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/rapidloop/nrpc" target="_blank">nRPC is like gRPC, but over NATS</a></td>
-              <td>nRPC is an RPC framework like gRPC, but for NATS. It can generate a Go client and server from the same .proto file that you'd use to generate gRPC clients and servers. The server is generated as a NATS MsgHandler.</td>
-              <td><a target="_blank" href="https://github.com/sparrc">Cameron Sparr</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/efmr/socket.io-nats" target="_blank">Socket.io-NATS Connector</a></td>
-              <td>This connector enables multiple socket.io instances to broadcast and emit events to and from each other through NATS.</td>
-              <td><a target="_blank" href="https://github.com/efmr">Edgar Ribeiro</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/influxdata/telegraf/tree/8d0f50a6fd10cea1af84ccfdc2beeb1a61dd19bd/plugins/inputs/nats_consumer" target="_blank">Telegraf</a></td>
-              <td>The NATS consumer plugin reads from specified NATS subjects and adds messages to InfluxDB. The plugin expects messages in the Telegraf Input Data Formats. A Queue Group is used when subscribing to subjects so multiple instances of telegraf can read from a NATS cluster in parallel.</td>
-              <td><a target="_blank" href="https://github.com/sparrc">Cameron Sparr</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/isobit/websocket-nats" target="_blank">websocket-nats</a></td>
-              <td>An in-browser websocket client for NATS, a lightweight, high-performance cloud native messaging system.</td>
-              <td><a target="_blank" href="https://github.com/isobit">Josh Glendenning</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/orus-io/nats-websocket-gw" target="_blank">Websocket Gateway</a></td>
-              <td>A websocket gateway for NATS, usable as a backend for elm-nats and websocket-nats.</td>
-              <td><a target="_blank" href="https://github.com/orus-io">Orus.io</a></td>
-              <td>Community</td>
-            </tr>
-            <tr>
-              <td><a href="https://github.com/hemerajs/hemera" target="_blank">Hemera</a></td>
-              <td>A Node.js microservices toolkit for NATS.</td>
-              <td><a target="_blank" href="https://github.com/StarpTech">Dustin Deus</a></td>
-              <td>Community</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-  </div>
-  <div class="external-clients-con col-md-12">
-      <p><em>Please <a href="mailto:info@nats.io?subject=NATS External Client">contact us</a> to add your external client to the download list.</em></p>
-  </div>
-</div>
+        <div class="external-clients-con col-md-12">
+            <p><em>Please <a href="mailto:info@nats.io?subject=NATS External Client">contact us</a> to add your external
+                client to the download list.</em></p>
+        </div>
+    </div>
 </div>
 {{ partial "footer.html" . }}
