Yeah I fixed the form

--- a/layouts/partials/stay-in-touch.html
+++ b/layouts/partials/stay-in-touch.html
@@ -2,7 +2,7 @@
 <p> Feel free to drop by <a href="https://github.com/nats-io/gnatsd#nats-office-hours" target="_blank">NATS Office Hours</a> to ask questions, cover issues, or just listen in and learn more about NATS.</p>
 <h2>NATS Newsletter</h2>
 <p>Stay up to date with the latest information on NATS.</p>
-<a class="btn btn-primary" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSd_MAN1MCDpSbZT7hrXmohGNpT0sUtxDCCOBJhmo_t2gvdHhQ/viewform">Sign Up!</a>
+<a class="btn btn-primary" target="_blank" href="https://goo.gl/forms/TFoKVm7yzU4ucM9i2">Sign Up!</a>
 <div id="social-con">
     <h2>Social</h2>
     <ul class="social-list list-inline">
