--- a/layouts/partials/newsletter.html
+++ b/layouts/partials/newsletter.html
@@ -5,7 +5,7 @@
     {{ range .Site.Data }}
     {{ range .events }}
 
-    <li class="col-md-6">
+    <li class="col-sm-12">
         <h4>{{ .venue }}</h4>
         <ul class="list-unstyled">
             <li><strong>When:</strong> {{ .when }}</li>
