--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -917,6 +917,13 @@ footer {
       .icon {
         color: #fff;
       }
+      .svg {
+        padding-top: 2px;
+      }
+      svg {
+        height: 32px;
+        vertical-align: sub;
+      }
     }
     @media (max-width: @screen-xs-max) {
       text-align: center;
