--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -901,6 +901,13 @@ footer {
       img {
         width: 32px;
       }
+      .svg {
+        padding-top: 2px;
+      }
+      svg {
+        height: 32px;
+        vertical-align: sub;
+      }
     }
   }
   .supported {
