--- a/layouts/partials/logos/ericsson.html
+++ b/layouts/partials/logos/ericsson.html
@@ -1,5 +1,5 @@
 <div class="col-xs-6 col-md-2 ericsson">
     <a target="_blank" href="http://www.ericsson.com/">
-        {{ readFile "static/img/ericsson.svg" | safeHTML }}
+        <img src="/img/ericsson.png" alt="ericsson" class="ericsson"/>
     </a>
 </div>
