--- a/layouts/partials/logos/ge.html
+++ b/layouts/partials/logos/ge.html
@@ -1,5 +1,5 @@
 <div class="col-xs-6 col-md-2 ge">
     <a target="_blank" href="http://www.ge.com/">
-        {{ readFile "static/img/ge.svg" | safeHTML }}
+        <img src="/img/ge.png" alt="ge" class="ge"/>
     </a>
 </div>
