--- a/layouts/partials/logos/htc.html
+++ b/layouts/partials/logos/htc.html
@@ -1,5 +1,5 @@
 <div class="col-xs-6 col-md-2 htc">
     <a target="_blank" href="http://www.htc.com/us/">
-        {{ readFile "static/img/htc.svg" | safeHTML }}
+        <img src="/img/htc.png" alt="htc" class="htc"/>
     </a>
 </div>
