--- a/layouts/partials/logos/pivotal.html
+++ b/layouts/partials/logos/pivotal.html
@@ -1,5 +1,5 @@
 <div class="col-xs-6 col-md-2 pivotal">
     <a target="_blank" href="http://pivotal.io/">
-        {{ readFile "static/img/pivotal.svg" | safeHTML }}
+        <img src="/img/pivotal.png" alt="pivotal" class="pivotal"/>
     </a>
 </div>
