--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -420,18 +420,22 @@ html#home-html {
       align-items: center;
       justify-content: center;
       flex-wrap: wrap;
+      img {
+        max-width: 100%;
+        max-height: 100%;
+      }
       .ge {
-        svg {
+        svg,img {
           width: 40%;
         }
       }
-      .htc {
-        svg {
+      .htc{
+        svg,img {
           width: 70%;
         }
       }
       .pivotal {
-        svg {
+        svg,img {
           width: 90%;
         }
       }
@@ -901,6 +905,10 @@ footer {
       img {
         width: 32px;
       }
+      .cncf {
+        padding-top: 10px;
+        width: 50%;
+      }
       .svg {
         padding-top: 2px;
       }
@@ -926,6 +934,10 @@ footer {
       }
       .svg {
         padding-top: 2px;
+      }
+      .cncf {
+        padding-top: 10px;
+        width: 50%;
       }
       svg {
         height: 32px;
