changed grid to make the site better looking on my fav mobile computing platform.

--- a/layouts/partials/logos/ericsson.html
+++ b/layouts/partials/logos/ericsson.html
@@ -1,4 +1,4 @@
-<div class="col-xs-6 col-md-2 ericsson">
+<div class="col-xs-3 ericsson">
     <a target="_blank" href="http://www.ericsson.com/">
         <img src="/img/ericsson.png" alt="ericsson" class="ericsson"/>
     </a>
