--- a/layouts/partials/logos/ge.html
+++ b/layouts/partials/logos/ge.html
@@ -1,4 +1,4 @@
-<div class="col-xs-6 col-md-2 ge">
+<div class="col-xs-2 ge">
     <a target="_blank" href="http://www.ge.com/">
         <img src="/img/ge.png" alt="ge" class="ge"/>
     </a>
