--- a/layouts/partials/logos/htc.html
+++ b/layouts/partials/logos/htc.html
@@ -1,4 +1,4 @@
-<div class="col-xs-6 col-md-2 htc">
+<div class="col-xs-3 htc">
     <a target="_blank" href="http://www.htc.com/us/">
         <img src="/img/htc.png" alt="htc" class="htc"/>
     </a>
