--- a/layouts/partials/logos/siemens.html
+++ b/layouts/partials/logos/siemens.html
@@ -1,4 +1,4 @@
-<div class="col-xs-6 col-md-2 siemens">
+<div class="col-xs-3 siemens">
     <a target="_blank" href="http://www.siemens.com/entry/cc/en/">
         <img src="/img/siemens.png" alt="siemens" class="siemens"/>
     </a>
