--- a/layouts/partials/logos/pivotal.html
+++ b/layouts/partials/logos/pivotal.html
@@ -1,4 +1,4 @@
-<div class="col-xs-6 col-md-2 pivotal">
+<div class="col-xs-3 col-xs-offset-1 pivotal">
     <a target="_blank" href="http://pivotal.io/">
         <img src="/img/pivotal.png" alt="pivotal" class="pivotal"/>
     </a>
