--- a/layouts/partials/logos/vmware.html
+++ b/layouts/partials/logos/vmware.html
@@ -1,4 +1,4 @@
-<div class="col-xs-6 col-md-2 vmware">
+<div class="col-xs-3 vmware">
     <a target="_blank" href="http://www.vmware.com/">
         <img src="/img/vmware.png" alt="vmware" class="vmware"/>
     </a>
