--- a/layouts/partials/logos/baidu.html
+++ b/layouts/partials/logos/baidu.html
@@ -1,5 +1,6 @@
-<div class="col-xs-6 col-md-2 baidu">
+<div class="col-xs-3 baidu">
     <a target="_blank" href="http://www.baidu.com/">
-        {{ readFile "static/img/baidu.svg" | safeHTML }}
+        <img src="/img/baidu.png" alt="baidu" class="baidu"/>
     </a>
 </div>
+<div class="col-xs-1"></div>
