--- a/layouts/partials/logos/siemens.html
+++ b/layouts/partials/logos/siemens.html
@@ -1,5 +1,5 @@
-<div class="col-xs-6 col-md-2 siemens">
+<div class="col-xs-3 siemens">
     <a target="_blank" href="http://www.siemens.com/entry/cc/en/">
-        {{ readFile "static/img/siemens.svg" | safeHTML }}
+        <img src="/img/siemens.png" alt="siemens" class="siemens"/>
     </a>
 </div>
