--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -420,22 +420,26 @@ html#home-html {
       align-items: center;
       justify-content: center;
       flex-wrap: wrap;
+      img {
+        max-width: 100%;
+        max-height: 100%;
+      }
       .ge {
-        svg {
+        svg,img {
           width: 40%;
         }
       }
-      .htc {
-        svg {
+      .htc{
+        svg,img {
           width: 70%;
         }
       }
       .pivotal {
-        svg {
+        svg,img {
           width: 90%;
         }
       }
-      .col-xs-6 {
+      .col-xs-4, .col-xs-3, .col-xs-2, .col-xs-1  {
         align-self: flex-end;
         margin-bottom: 30px;
       }
@@ -563,6 +567,18 @@ html#home-html {
       .icon-reddit{
         color: @nats-brand-reddit-dark;
       }
+
+      @media (max-width: @screen-xs-max) {
+        .icon-twitter,
+        .icon-google-plus,
+        .icon-slack,
+        .icon-reddit,
+        .icon-github{
+          vertical-align: middle;
+          font-size: 20px;
+        }
+      }
+
     }
   }
   .community-notice-panel {
@@ -901,12 +917,28 @@ footer {
       img {
         width: 32px;
       }
+      .cncf {
+        padding-top: 10px;
+        width: 50%;
+        vertical-align: sub;
+      }
       .svg {
         padding-top: 2px;
       }
       svg {
         height: 32px;
         vertical-align: sub;
+      }
+
+      @media (max-width: @screen-xs-max) {
+        .icon-twitter,
+        .icon-google-plus,
+        .icon-slack,
+        .icon-reddit,
+        .icon-github{
+          vertical-align: sub;
+          font-size: 20px;
+        }
       }
     }
   }
@@ -926,6 +958,10 @@ footer {
       }
       .svg {
         padding-top: 2px;
+      }
+      .cncf {
+        padding-top: 10px;
+        width: 50%;
       }
       svg {
         height: 32px;
