--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -15,8 +15,12 @@
 <script src="/js/index.js"></script>
 <!-- Github Buttons -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
-
-
+<script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/prism.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/components/prism-go.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/components/prism-bash.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/components/prism-javascript.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/components/prism-python.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/components/prism-clike.min.js"></script>
 <!-- Google Analytics Configuration - scripts added dynamically after user opts in or out-->
 <script>
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
