--- a/layouts/partials/tutorials/codetabs.html
+++ b/layouts/partials/tutorials/codetabs.html
@@ -6,24 +6,27 @@
 </ul>
 
 <div class="tab-content">
-    <div id="go" class="tab-pane fade in active">
-        <code>
-            fmt.Println("Hello World!");
+<pre id="go" class="tab-pane fade in active">
+    <code class="language-go">
+fmt.Println("Hello World!");
+    </code>
+</pre>
+    <pre id="js" class="tab-pane fade">
+        <code class="language-javascript">
+                    console.log("hello world!");
+
         </code>
-    </div>
-    <div id="js" class="tab-pane fade">
-        <code>
-            console.log("hello world!");
+    </pre>
+    <pre id="ts" class="tab-pane fade">
+        <code class="language-javascript">
+                    console.log("hello world!");
+
         </code>
-    </div>
-    <div id="ts" class="tab-pane fade">
-        <code>
-            console.log("hello world!");
+    </pre>
+    <pre id="py" class="tab-pane fade">
+        <code class="language-python">
+                    print("hello world");
+
         </code>
-    </div>
-    <div id="py" class="tab-pane fade">
-        <code>
-            print("hello world");
-        </code>
-    </div>
+    </pre>
 </div>
