--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,8 +16,9 @@
     <!-- CSS -->
     <link href="/css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/default.min.css">
-    <script src="https://use.fontawesome.com/f2a4eb3070.js"></script>
-    <!-- Fonts -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism.min.css">
+
+      <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:100,200,300,400,600,400italic,600italic|Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
