--- a/layouts/partials/tutorials/codetabs.html
+++ b/layouts/partials/tutorials/codetabs.html
@@ -6,27 +6,16 @@
 </ul>
 
 <div class="tab-content">
-<pre id="go" class="tab-pane fade in active">
-    <code class="language-go">
+<pre id="go" class="tab-pane fade in active"><code class="language-go">
 fmt.Println("Hello World!");
-    </code>
-</pre>
-    <pre id="js" class="tab-pane fade">
-        <code class="language-javascript">
-                    console.log("hello world!");
-
-        </code>
-    </pre>
-    <pre id="ts" class="tab-pane fade">
-        <code class="language-javascript">
-                    console.log("hello world!");
-
-        </code>
-    </pre>
-    <pre id="py" class="tab-pane fade">
-        <code class="language-python">
-                    print("hello world");
-
-        </code>
-    </pre>
+</code></pre>
+<pre id="js" class="tab-pane fade"><code class="language-javascript">
+console.log("hello world!");
+</code></pre>
+<pre id="ts" class="tab-pane fade"><code class="language-javascript">
+console.log("hello world!");
+</code></pre>
+<pre id="py" class="tab-pane fade"><code class="language-python">
+print("hello world");
+</code></pre>
 </div>
