theme change for code

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,7 +16,7 @@
     <!-- CSS -->
     <link href="/css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/default.min.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism-okaidia.min.css">
 
       <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:100,200,300,400,600,400italic,600italic|Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
