--- a/layouts/tutorial/single.html
+++ b/layouts/tutorial/single.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-md-8">
       <div class="blog-nav-con-upper">
-        <a href="/blog"><i class="icon-back"></i> Back to Blog</a>
+        <a href="/tutorial"><i class="icon-back"></i> Back to Tutorials</a>
       </div>
       <div class="page-header">
         <h1>{{ .Title }}</h1>
@@ -15,7 +15,7 @@
     <div class="col-md-9">
       {{ .Content }}
       <hr>
-      <a href="/blog"><i class="icon-back"></i> Back to Blog</a>
+      <a href="/tutorial"><i class="icon-back"></i> Back to Tutorials</a>
     </div>
     <div class="col-md-3">
       <dl class="blog-entry-meta">
